# desktop

./: .gitignore  AGENTS.md  PLAN.md  PR_602_REVIEW.md  Untitled-1.ipynb  Untitled-2.ipynb  Untitled-3.ipynb  Untitled-4.ipynb  Untitled-Clone.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitlednmpy.ipynb  active.ipynb  agent_announce.ipynb  anaconda-nteract.ipynb  anil.ipynb  attachments-tester.ipynb  canvas.ipynb  chatting.ipynb  claude-hacking.ipynb  claudy-coffee.ipynb  consofconsole.ipynb  crate-comparison.ipynb  demo-notebook.ipynb  demo.ipynb  demo_scroll.py  denosettings.ipynb  div.ipynb  example.ipynb  firsttry.ipynb  flake.nix  fluid.py  forzed.py  goodmorning.ipynb  gremlin2.ipynb  gremlins.ipynb  im-making-my-ideal-notebook.ipynb  image-test.ipynb  index.ipynb  journey-to-automerge.ipynb  (+40 more)
.claude/channels/: package.json
.claude/rules/: environments.md
.context/plans/: local-first-automerge-migration.md  spike-c-custom-automerge-wasm.md
.github/workflows/: build.yml  release-common.yml
contributing/: clean-room-protocol-redesign.md  development.md  environments.md
crates/notebook/: Cargo.toml
crates/notebook-protocol/: Cargo.toml
crates/runtimed/: Cargo.toml
docs/: protocol-audit.md  protocol-correctness-audit.md  protocol-target.md
docs/rfcs/: 001-mdx-jupyter-example.mdx.ipynb  001-mdx-jupyter-notebook.md  002-mdx-native-format.md
mcpb/: manifest.stable.json
mcpb/server/: launch.js
python/notebook-tui/: pyproject.toml
python/notebook-tui/src/notebook_tui/: __init__.py  __main__.py  app.py  widgets.py
scripts/: sync-e2e.py
(+81 files in other folders)
